# fdi-analytics

./: .dockerignore  .env.example  .gitignore  NOTEBOOK_GUIDE.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: gradio_app.py  streamlit_app.py
data/processed/: README.md  player_stats_all.csv
data/raw/: README.md  player_5403_stats.csv  test_all.csv  test_all_wide.csv
docker/: app.Dockerfile  etl.Dockerfile
models/: README.md  best_fdi_pipeline.joblib
notebooks/: eda.ipynb  fdi_rating_modeling.ipynb  scraping.py
pipeline/: __init__.py  browser.py  config.py  diagnostics.py  etl.py  features.py  ingest.py  monitoring.py  scheduler.py  scraper.py  train.py  transform.py  validation.py
references/: checklist.txt  project-proposal.ipynb  topic-ideas.ipynb
reports/: PRESENTATION.md  PRESENTATION_SCRIPT.md  README.md  presentation.md  report.ipynb  slides.md
reports/metrics/: data_quality.json  latest_metrics.json  model_comparison.csv  presentation_metrics.json
tests/: test_feature_engineering.py  test_ingest.py  test_monitoring.py  test_scraper_driver.py  test_validation.py
