[project]
name = "template-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "beautifulsoup4>=4.14.2",
    "duckdb>=1.4.3",
    "gradio>=6.2.0",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "matplotlib>=3.10.7",
    "psycopg[binary]>=3.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "rise>=5.7.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "statsmodels>=0.14.5",
    "vega-datasets>=0.9.0",
    "voila>=0.5.11",
]
